--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,3 @@
-/9hpE5VYHZcQ.jpg
-/Diffury
-/Diffury.zip
-/KKMWsx4YBHo.jpg
-/LaTeX
-/LaTeX.rar
-/learn_ts
-/numerMethod_task1.py
-/numerMethod_task2.py
-/photo_2024-06-16_20-29-11 (2).jpg
-/photo_2024-06-16_20-29-11.jpg
-/photo_2024-06-18_12-19-15.jpg
-/Primery_biletov_IVT.doc
-/Sample_2020-06-20.pdf
-/task-arrays
-/task-async
-/task-basic-syntax
-/task-classes
-/task-cycles
-/task-dom
-/task-events
-/task-flexbox
-/task-functions
-/task-grid
-/task-html
-/task-inheritance
-/task-interfaces
-/task-js-styles
-/task-method-context
-/task-objects
-/task-scripts
-/task-static-fields
-/task-types
-/UML Test1
-/UML Test1.7z
-/vqzyTR7Dn8Y.jpg
-/ва.PNG
-/Использовании нейросети в решении конфликтов.pptx
-/Краснов
-/Краснов.rar
-/Требования к продукту.docx
 *.md
+*.env
+**/__pycache__
